--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+   display: flex; 
+   align-items: center;
+   justify-content: center;
 }
 
 
