--- a/app/globals.css
+++ b/app/globals.css
@@ -20,9 +20,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-   display: flex; 
+   /* display: flex; 
    align-items: center;
-   justify-content: center;
+   justify-content: center; */
 }
 
 
